Corrections de contraste et erreurs code

--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -4286,10 +4286,13 @@ tbody.collapse.in {
     margin-left: 2px;
     vertical-align: middle;
     border-top: 4px dashed;
-    border-top: 4px solid\9;
+    /* border-top: 4px solid\9; */
     border-right: 4px solid transparent;
     border-left: 4px solid transparent
 }
+
+html>/**/body .caret { 
+    border-top: 4px solid }
 
 .dropdown,
 .dropup {
